<resources>
    <string name="app_name">Attendex</string>
    <string name="claims_form_title">Medical Claims Form</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_reason_for_claim">Enter Reason for Claim</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit_button">Submit</string>
    <string name="nav_header_title">Attendex</string>
    <string name="nav_header_subtitle">Medical Claims Management</string>
    <string name="attach_document">Attach Document</string>
    <string name="choose_method">Choose Method</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="image_captured">Image Captured Successfully!</string> // Added this string
</resources>